--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "child_process": "^1.0.2",
+    "prompts": "^2.4.2",
     "yargs": "^17.7.1"
   }
 }
